<resources>
    <string name="app_name">BrickList</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_new_project">New project</string>

    <!-- Preferences -->
    <string name="url_prefix">URL prefix for inventories base</string>
    <string name="archive_title">Show archived</string>
    <string name="project_number">Project number</string>
    <string name="project_name">Project name</string>
    <string name="check">Check</string>
    <string name="add">Add</string>
    <string name="title_activity_project">Project</string>
    <string name="save">save</string>
    <string name="remove">remove</string>
    <string name="brickCountText">%d of %d</string>
    <string name="archive">archive</string>
    <string name="filename">Filename</string>
    <string name="email">email</string>
    <string name="send">SEND</string>
    <string name="default_email">Default email address</string>
    <string name="filenameAndEmail">Filename and email can\'t be empty.</string>
    <string name="any">Any</string>
    <string name="only_new">Only new</string>
    <string name="only_used">Only used</string>
    <string name="limit_condition_to">Limit condition to:</string>
    <string name="save_file_as">Save file as:</string>
    <string name="your_list_is_empty_add_some_inventories_by_clicking_button">Your list is empty, add some inventories by clicking + button</string>

</resources>
