<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive_white_24dp"
        android:title="@string/archive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_unarchive"
        android:icon="@drawable/ic_unarchive_white_24dp"
        android:title="@string/archive"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/remove"
        app:showAsAction="ifRoom" />

</menu>
